syntax = "proto3";
package api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "dto_user.proto";

service User {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/go-protobuf/external/v1/user/{username}"
        };
    }

    rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/go-protobuf/external/v1/user"
            body: "*"
        };
    }

    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/go-protobuf/external/v1/user/{username}"
            body: "*"
        };
    }

    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/go-protobuf/external/v1/user/{username}"
        };
    }
}