syntax = "proto3";
package api;

message UserModel {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string fullname = 4;
}